<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="?attr/colorSurface">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_gravity="center_horizontal"
        android:maxWidth="400dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.2">

        <TextView
            android:id="@+id/app_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mobile_health"
            android:textColor="?attr/colorOnSurface"
            android:textSize="50sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginBottom="32dp"/>

        <!-- Email Input -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconContentDescription="Email icon"
            android:hint="@string/email_hint2"
            app:startIconDrawable="@drawable/baseline_email_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxWidth="487dp"
                android:paddingStart="40dp"

                android:paddingEnd="10dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password Input -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:maxWidth="480dp"
            app:startIconContentDescription="Password icon"
            app:startIconDrawable="@drawable/baseline_lock_24"
            app:endIconMode="password_toggle"
            app:endIconContentDescription="Toggle password visibility"
            android:layout_marginTop="16dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxWidth="487dp"

                android:inputType="textPassword"
                android:paddingStart="40dp"
                android:paddingEnd="10dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Login Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:padding="16dp" />

        <!-- New User? Link -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/new_user_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:minHeight="48dp"
            android:paddingTop="10sp"
            android:text="@string/no_account_signup_text"
            android:textColor="?attr/colorOnSurface"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"/>

        <!-- Forgot Password Link -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/forgot_user_password_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:minHeight="48dp"
            android:paddingTop="5sp"
            android:text="@string/forgot_password_text"
            android:textColor="?attr/colorOnSurface"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>